k8s/kubeyaml/k8s-docker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: lotse
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:17.2
          ports:
            - containerPort: 5432
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  namespace: lotse
  name: postgres
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: lotse
  name: lotse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lotse
  template:
    metadata:
      labels:
        app: lotse
    spec:
      containers:
        - name: lotse
          image: lotse:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - name: lotse-volume
              mountPath: /var/Kubernetes/Lotse
      volumes:
        - name: lotse-volume
          persistentVolumeClaim:
            claimName: lotse-volume-pvc
---
apiVersion: v1
kind: Service
metadata:
  namespace: lotse
  name: lotse
spec:
  selector:
    app: lotse
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "180"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "180"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "180"
  labels:
    app.kubernetes.io/name: lotse
  name: lotse
  namespace: lotse
spec:
  ingressClassName: nginx
  rules:
    - host: lotse.kubernetes.docker.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lotse
                port:
                  number: 8000
